--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,20 +1,22 @@
 body {
     font-family: georgia, serif;
-    background-color: ##6D7B8D;
+    background-color: white;
 }
 
 h1 {
     text-align: center;
     text-transform: uppercase;
-    font-family: georgia, serif;
+    font-family: helvetica;
     letter-spacing: 10px;
 }
 
 h3 {
     text-align: center;
+    font-family: helvetica;
 }
 
 h5 {
+    margin-top: 0;
     font-weight: lighter;
 }
 
@@ -22,27 +24,30 @@ img {
     width: 100%;
 }
 
-.flex-header {
-    display: flex;
-    justify-content: center;
+.title {
+    font-family: helvetica;
+    font-size: 120%;
 }
 
-.img-header1 {
-    height: 100%;
-    width: auto;
-    object-fit: cover;
-    border-right-color: black;
-    border-right-style: solid;
-    border-right-width: thick;
+.big_title {
+    font-family: helvetica;
+    font-size: 150%;
+    text-align: center;
+    border-width: medium;
+    border-color: black;
+    border-style: solid;
+    padding: 20px;
+    display: inline-block;
 }
 
-.img-header2 {
-    height: 100%;
-    width: auto;
+.bodymain {
+    margin: 0% 10% 0% 10%;
+}
+
+.img-header {
+    width: 100%;
+    height: auto;
     object-fit: cover;
-    border-left-color: yellow;
-    border-left-style: dashed;
-    border-left-width: thick;
 }
 
 .byline {
@@ -82,12 +87,54 @@ img {
     border-top-color: black;
     border-top-width: thin;
     border-top-style: solid;
+    margin: 3% 0% 3% 0%;
 }
 
 .responsive_img {
     width: 100%;
     max-width: 75px;
     height: auto;
+}
+
+.responsive_box {
+    width: 100%;
+    max-width: 60px;
+    height: auto;
+}
+
+a {
+    color: black;
+    text-decoration: underline;
+    text-decoration-color: #0098fe;
+    text-decoration-thickness: 2px;
+    text-underline-offset: 2px;
+}
+
+a:hover {
+    color: #0098fe;
+}
+
+.imgcrop {
+    max-width: 50%;
+    max-height: 100%:
+}
+
+.tiny {
+    max-width: 8%;
+    max-height: auto;
+    font-size: 50%;
+}
+
+.block {
+    margin-bottom: 10%;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    position: relative;
 }
 
 .left {
@@ -98,22 +145,33 @@ img {
 
 .right {
     float: right;
-    width: 300px;
-    padding-left: 10px;
+    width: 50%;
+    text-align: right;
+}
+
+.left2 {
+    padding-left: 8%;
+    font-size: 110%;
+}
+
+.right2 {
+    padding-right: 8%;
+    font-size: 110%;
 }
 
 .row {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     align-content: space-between;
+    padding: 10px;
 }
 
 .column {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-around;
 }
